--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -29,15 +29,16 @@ RewriteRule ^(.*)$ /lti13/lms/embed.php?path=$1 [QSA,L,R]
 #RewriteCond %{HTTP_HOST}@@%{HTTP_REFERER} !^([^@]*)@@https?://\1/.*
 ## https://serverfault.com/questions/1011090/how-to-set-the-http-referrer-in-a-htaccess-redirect
 # https://stackoverflow.com/questions/41186475/show-message-when-framed-htaccess
-RewriteCond %{HTTP_X_FORWARDED_FOR} !^10.201.54.31 [OR]
+RewriteCond %{HTTP_X_FORWARDED_FOR} !^10.201.54.31
 #RewriteCond %{HTTP_HOST} !^ailanto-dev.intecca.uned.es [OR]
 #RewriteCond %{HTTP_HOST} !^agora.uned.es [OR]
 #RewriteCond %{HTTP_HOST} !^agora.uned.es
 #RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(uploads/publicacion/|publicacion/|lti/publicacion/)(.*) [OR]
 #RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(lti/|)(lti13|publicacion/|lti/publicacion/|)(lms/|lms/giccu/|[a-f,0-9]{24}/|)(publish|launch|dl|diffusion|)(.php|.*|)
-RewriteCond %{HTTP_REFERER} !^http[s|]://ailanto-dev.intecca.uned.es(:9002|)/(lti13/|lti/lti13/|)(lms/|lms/giccu/|)(publish|login|launch|dl|diffusion|)(.php|) [OR]
-RewriteCond %{HTTP_REFERER} !^https://agora.uned.es/ [OR]
-RewriteCond %{HTTP_REFERER} !^http[s|]://10.201.54.31/ [OR]
+RewriteCond %{HTTP_REFERER} !^http[s|]://10.201.54.31/
+RewriteCond %{HTTP_REFERER} !^http[s|]://ailanto-dev.intecca.uned.es(:9002|)/(lti13/|lti/lti13/|)(lms/|lms/giccu/|)(publish|login|launch|dl|diffusion|)(.php|)
+RewriteCond %{HTTP_REFERER} !^https://acacia.intecca.uned.es/
+RewriteCond %{HTTP_REFERER} !^https://agora.uned.es/
 #RewriteCond %{ENV:AH_Client_IP} 10.201.54.141
 #RewriteRule .* - [F,L]
 #RewriteRule .* - [R=408,L]
