--- a/web/.htaccess
+++ b/web/.htaccess
@@ -20,7 +20,7 @@ RewriteCond %{HTTP_X_FORWARDED_FOR} !^10.201.54.141
 RewriteCond %{HTTP_REFERER} !^http://ailanto-dev.intecca.uned.es(.*)
 RewriteCond %{HTTP_REFERER} !^http[s|]://10.201.54.31(.*)
 ## https://techexpert.tips/apache/apache-blocking-url-query/
-RewriteCond %{REQUEST_URI} (difusion|upload|publication) [NC]
+RewriteCond %{REQUEST_URI} (difusion|Uupload|Ppublication) [NC]
 RewriteRule .* - [F,L]
 
 ## YII default
