--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -40,16 +40,18 @@ RewriteCond %{HTTP_REFERER} !^http[s|]://ailanto-dev.intecca.uned.es(.*)
 RewriteCond %{HTTP_REFERER} !^https://acacia.intecca.uned.es(.*)
 RewriteCond %{HTTP_REFERER} !^https://agora.uned.es(.*)
 RewriteCond %{HTTP_REFERER} !^http[s|]://10.201.54.31(.*)
+RewriteRule .* - [R=405,L]
+
 RewriteCond %{REQUEST_URI} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
 RewriteCond %{SCRIPT_NAME} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
 RewriteCond %{PHP_SELF} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
 #RewriteCond %{ENV:AH_Client_IP} 10.201.54.141
 #RewriteRule .* - [F,L]
-#RewriteRule .* - [R=408,L]
-RewriteRule .* - [R=405,L]
+RewriteRule .* - [R=408,L]
 
 ## http://stackoverflow.com/questions/37769960/ddg#37770158
 #ErrorDocument 408 %{HTTP_REFERER}
+ErrorDocument 408 http://ailanto-dev.intecca.uned.es/
 #ErrorDocument 405 "Access Not Allowed"
 ErrorDocument 405 https://ailanto-dev.intecca.uned.es/lti13/lms/giccu/error.php
 
