--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -24,6 +24,13 @@ RewriteRule ^(.*)$ /lti13/lms/embed.php?path=$1 [QSA,L,R]
 # [HTTP_X_FORWARDED_FOR] => 10.201.54.141
 # [HTTP_X_FORWARDED_HOST] => ailanto-dev.intecca.uned.es
 # [HTTP_X_FORWARDED_SERVER] => ailanto-dev.intecca.uned.es
+RewriteCond %{REQUEST_URI} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
+RewriteCond %{SCRIPT_NAME} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
+RewriteCond %{PHP_SELF} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
+#RewriteCond %{ENV:AH_Client_IP} 10.201.54.141
+#RewriteRule .* - [F,L]
+RewriteRule .* - [R=408,L]
+
 ## http://tltech.com/info/referrer-htaccess/
 #RewriteCond %{HTTP_REFERER} !^http://www.mysite.com/.*
 #RewriteCond %{HTTP_HOST}@@%{HTTP_REFERER} !^([^@]*)@@https?://\1/.*
@@ -42,16 +49,9 @@ RewriteCond %{HTTP_REFERER} !^https://agora.uned.es(.*)
 RewriteCond %{HTTP_REFERER} !^http[s|]://10.201.54.31(.*)
 RewriteRule .* - [R=405,L]
 
-RewriteCond %{REQUEST_URI} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
-RewriteCond %{SCRIPT_NAME} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
-RewriteCond %{PHP_SELF} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
-#RewriteCond %{ENV:AH_Client_IP} 10.201.54.141
-#RewriteRule .* - [F,L]
-RewriteRule .* - [R=408,L]
-
 ## http://stackoverflow.com/questions/37769960/ddg#37770158
 #ErrorDocument 408 %{HTTP_REFERER}
-ErrorDocument 408 http://ailanto-dev.intecca.uned.es/
+ErrorDocument http://ailanto-dev.intecca.uned.es/index.php?r=site%2Flogin
 #ErrorDocument 405 "Access Not Allowed"
 ErrorDocument 405 https://ailanto-dev.intecca.uned.es/lti13/lms/giccu/error.php
 
